2002-01-11  Bradford Hovinen  <hovinen@ximian.com>

	* mime-edit-dialog.c (default_action_changed_cb): Set sensitivity
	of needs_terminal_toggle
	(store_data): Set needs_terminal
	(fill_dialog): Set needs_terminal_toggle

	* mime-type-info.c (mime_type_info_free): Remove from dirty list
	(mime_type_info_save): Use libuuid to generate a unique ID for the
	custom app
	(mime_type_info_load): Check for custom line based on name
	(mime_type_info_load): Fetch needs_terminal
	(mime_type_info_save): Store info->needs_terminal in app

	* mime-edit-dialog.c (populate_application_list): Don't check
	default action id if default action is NULL

	* mime-type-info.c (mime_type_info_free): Remove data from
	mime_type_table

	* service-info.c (service_info_free): Free the info structure

	* mime-type-info.c (mime_type_info_load): Ditto below

	* service-info.c (service_info_load): Use service_info_table as a
	cache
	(service_info_free): Remove data from service_info_table

	* mime-edit-dialog.c (populate_application_list): Use custom_line
	for program_entry

	* mime-type-info.c (mime_type_info_load): Read custom_line from
	default_action
	(mime_type_info_save): Set custom line through GnomeVFS app
	registry

	* file-types-capplet.c (row_activated_cb): Implement. Callback for
	row_activated signal

	* mime-edit-dialog.c (add_ext_cb): Don't create a separate dialog;
	just read from new_ext_entry

	* service-info.c (get_apps_for_service_type): Implement

	* service-edit-dialog.c (program_changed_cb): Implement
	(service_edit_dialog_init): Connect program_select changed signal
	(populate_app_list): Fill app menu with results from
	get_apps_for_service_type

	* service-info.c (fill_service_apps): Implement

	* service-edit-dialog.c (store_data): Retrieve app info from
	option menu

	* file-types-capplet.c (apply_cb): Commit the changeset
	(main): Construct a changeset
	(edit_cb): Pass the changeset to service_info_new

	* service-info.c (set_string): Don't set the value if it is NULL