@@ -5,8 +5,10 @@
  - Fix gnome_url_show
  - Make add work
  - Need a way to get all apps in the app registry
- - Segfault when edit clicked and nothing selected
- - Support needs terminal in custom line for mime types
+ - Only enable "look at content" if GnomeVFS supports the protocol
+ - Generate MIME type if field is empty
+ - When no apps/components are available, desensitize app/component list
+ - Better sorting on the MIME types tree
 
 CVS Surgery
  - Move file-types to gnome-control-center, rename ???
